Details
Description
*Rproduction steps
- set desktop resolution to 800x600 32bpp, VBox4.3.12, VBEMP
- open cmd
- hit Alt+Enter to switch to fullscreen
Expected result
The taskbar should be hidden
Observed result
0.4.13-dev-1192-gc2b476b the taskbar remains visible errneously
Upon Pressing Alt+Enter it logs
(win32ss/user/ntuser/winpos.c:787) err: FIXME: Parent is Desktop, Min off screen!
|
(win32ss/gdi/eng/pdevobj.c:522) PDEVOBJ_bSwitchMode, ppdev = E1688008, pSurface = E18C9828
|
(win32ss/gdi/eng/pdevobj.c:585) leave, ppdev = E1688008, pSurface = E1AB3390
|
(win32ss/user/ntuser/keyboard.c:966) err: Window is NULL
|
(win32ss/user/ntuser/display.c:868) err: BitCount New 32 Orig 32 ChkNew 32
|
(win32ss/gdi/eng/pdevobj.c:522) PDEVOBJ_bSwitchMode, ppdev = E1688008, pSurface = E1AB3390
|
(win32ss/gdi/eng/pdevobj.c:585) leave, ppdev = E1688008, pSurface = E1A16398
|
(win32ss/user/ntuser/display.c:868) err: BitCount New 32 Orig 32 ChkNew 32
|
(win32ss/user/ntuser/painting.c:158) err: LOOP it
|
(win32ss/user/ntuser/painting.c:162) err: SendSyncPaint Found one in the Sent Msg Queue!
|
(win32ss/user/ntuser/painting.c:158) err: LOOP it
|
(win32ss/user/ntuser/painting.c:162) err: SendSyncPaint Found one in the Sent Msg Queue!
|
(win32ss/gdi/eng/pdevobj.c:522) PDEVOBJ_bSwitchMode, ppdev = E1688008, pSurface = E1A16398
|
(win32ss/gdi/eng/pdevobj.c:585) leave, ppdev = E1688008, pSurface = E176DB78
|
(win32ss/user/ntuser/painting.c:158) err: LOOP it
|
(win32ss/user/ntuser/painting.c:162) err: SendSyncPaint Found one in the Sent Msg Queue!
|
(win32ss/user/ntuser/painting.c:158) err: LOOP it
|
(win32ss/user/ntuser/painting.c:162) err: SendSyncPaint Found one in the Sent Msg Queue!
|
(win32ss/user/ntuser/display.c:868) err: BitCount New 32 Orig 32 ChkNew 32
|
It is a regression as you can see when comparing:
https://jira.reactos.org/secure/attachment/54554/0.4.13-dev-1192-gc2b476b_800x600desktop.png
SVN 69796 https://jira.reactos.org/secure/attachment/32316/react-2015-11-03T20-38-30-515625000Z.webm
Attachments
Issue Links
- blocks
-
CORE-11242 Some games may leave taskbar visible in fullscreen mode
-
- Open
-
- relates to
-
CORE-10473 switching console to fullscreen cuts off some pixels left when not run in 640x480
-
- Open
-