[0.4.13][WIN32SS] Fix regression CORE-16393

Symptom "cmd did not hide the taskbar anymore when switching to fullscreen"

It regressed by SVN r75407 == git
09ab5ea7ed2ab0e709ed2e8f8f9f6c3711b2ac7f

VBox LGTM https://reactos.org/testman/compare.php?ids=69295,69297
 KVM LGTM https://reactos.org/testman/compare.php?ids=69296,69298

Many thanks to the patches author James Tabor.

cherry picked from commit 0.4.14-dev-38-g
96ef605f4b91d15713bc358094603521745ffde8